--- a/skin.html
+++ b/skin.html
@@ -48,6 +48,19 @@
           </s_search>
         </div>
       </div>
+
+      <s_cover_group>
+        <header class="home-header">
+          <div class="home-header-wrapper">
+            <!-- <h2 class="home-header__slogun">[##_var_blogSlogun_##]</h2> -->
+            <!-- <span class="home-header__slogun-description">
+              [##_var_blogSlogunDescription_##]
+            </span> -->
+            <h2 class="home-header__slogun">My Second Room</h2>
+            <span class="home-header__slogun-description"> daily blog </span>
+          </div>
+        </header>
+      </s_cover_group>
     </s_t3>
   </body>
 </html>
