--- a/skin.html
+++ b/skin.html
@@ -49,17 +49,35 @@
         </div>
       </div>
 
+      <header class="home-header">
+        <div class="home-header-wrapper">
+          <!-- <h2 class="home-header__slogun">[##_var_blogSlogun_##]</h2> -->
+          <!-- <span class="home-header__slogun-description">
+            [##_var_blogSlogunDescription_##]
+          </span> -->
+          <h2 class="home-header__slogun">My Second Room</h2>
+          <span class="home-header__slogun-description"> daily blog </span>
+        </div>
+      </header>
+
       <s_cover_group>
-        <header class="home-header">
-          <div class="home-header-wrapper">
-            <!-- <h2 class="home-header__slogun">[##_var_blogSlogun_##]</h2> -->
-            <!-- <span class="home-header__slogun-description">
-              [##_var_blogSlogunDescription_##]
-            </span> -->
-            <h2 class="home-header__slogun">My Second Room</h2>
-            <span class="home-header__slogun-description"> daily blog </span>
-          </div>
-        </header>
+        <s_cover_rep>
+          <s_cover name="image-slide">
+            <div class="image-slide">
+              <s_cover_item>
+                <div class="image-slide-item">
+                  <s_cover_item_thumbnail>
+                    <img class="image" src="[##_cover_item_thumbnail_##]" />
+                  </s_cover_item_thumbnail>
+                  <strong class="title">[##_cover_item_title_##]</strong>
+                  <a href="[##_cover_item_url_##]" class="action"
+                    >자세히 보기</a
+                  >
+                </div>
+              </s_cover_item>
+            </div>
+          </s_cover>
+        </s_cover_rep>
       </s_cover_group>
     </s_t3>
   </body>
